refactor: refactored code base and introduce PaneWindow